# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  argparsing.py  converter.py  difference_evaluation.py  file4.yml  gendiff_with_formatter.py  get_difference.py  parsing.py
gendiff/formatters/: __init__.py  json.py  json_f.py  plain.py  plain_f.py  plain_format.py  stylish.py  stylish_f.py  stylish_format.py
gendiff/modules/: converter.py  get_difference.py  parsing.py
gendiff/modules/formatters/: plain_f.py  stylish_f.py
gendiff/scripts/: gendiff.py
tests/: test_difference_evaluation.py  test_gendiff.py  test_get_difference.py
tests/fixtures/: file1.json  file1.yml  file2.json  file2.yml  res_json.txt  result_yml.txt
