[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The tool for two JSON/YAML contents comparison"
authors = ["Elenlith <mishchenkov@list.ru>"]
readme = "README.md"
repository = "https://github.com/Elenlith/python-project-50.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free For Home Use",
    "Operating System :: Unix",
]
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
